# rwkgame

./: README.md  notes  run_docker
Diary/: 2025-11-23 First steps.md  2025-11-24.md  2025-12-07 Success - Almost.md
RWK_Source/: readme.txt
RWK_Source/Beepbox/: compose.html
RWK_Source/Framework/OS/: common.h
RWK_Source/Framework/OS/Linux/: gl11.h  graphics_core.cpp  graphics_core.h  input_core.cpp  input_core.h  network_core.cpp  network_core.h  os_core.cpp  os_core.h  os_headers.h  social_core.cpp  social_core.h  sound_core.cpp  sound_core.h  steam_core.cpp  transaction_core.cpp  transaction_core.h  util_core.h
RWK_Source/Framework/OS/WASM/: gl30.h  graphics_core.cpp  graphics_core.h  input_core.cpp  input_core.h  legacy_graphics_core.h  network_core.cpp  network_core.h  os_core.cpp  os_core.h  os_headers.h  social_core.cpp  social_core.h  sound_core.cpp  sound_core.h  transaction_core.cpp  transaction_core.h  util.js  util_core.h
RWK_Source/Framework/OS/WASM/OpenMPT/: make  make.bat
RWK_Source/Framework/OS/WASM/OpenMPT/libopenmpt/: in_openmpt.cpp  libopenmpt_c.cpp  libopenmpt_impl.cpp  libopenmpt_version.h  xmp-openmpt.cpp
RWK_Source/Framework/OS/WASM/OpenMPT/libopenmpt/common/: CompilerDetect.h  FileReader.h  mptRandom.cpp  mptRandom.h  mptString.h  version.cpp  versionNumber.h
RWK_Source/Framework/OS/WASM/OpenMPT/libopenmpt/dox/: changelog.md  dependencies.md
RWK_Source/Framework/OS/WASM/OpenMPT/libopenmpt/soundlib/: Dlsbank.cpp  ITTools.cpp  Load_it.cpp  Load_mdl.cpp  Load_med.cpp  Load_mid.cpp  Load_mo3.cpp  Load_mod.cpp  Load_s3m.cpp  Load_xm.cpp  S3MTools.h  SampleFormats.cpp  Snd_defs.h  Snd_fx.cpp  Sndfile.cpp  Sndfile.h  Sndmix.cpp  UpgradeModule.cpp  XMTools.cpp
RWK_Source/Framework/OS/WASM/OpenMPT/libopenmpt/soundlib/plugins/: PlugInterface.cpp  PluginManager.cpp
RWK_Source/Framework/OS/WASM/spoofs/: readme.txt
RWK_Source/Framework/OS/WASM/xmp/: make.bat
RWK_Source/Framework/OS/WASM/xmp/src/: load.c
RWK_Source/Framework/OS/Windows/: gl11.h  graphics_core.cpp  graphics_core.h  input_core.cpp  input_core.h  leaktester.cpp  leaktester.h  network_core.cpp  network_core.h  os_core.cpp  os_core.h  os_headers.h  readme.txt  social_core.cpp  social_core.h  social_core_steam.cpp  sound_core.cpp  sound_core.h  transaction_core.cpp  transaction_core.h  util_core.h
RWK_Source/Framework/OS/Windows/ENET/: enet.cpp  enet.h
RWK_Source/Framework/OS/Windows/Image/Include/: Png.h  jmorecfg.h  jpeglib.h
RWK_Source/Framework/OS/Windows/Image/Lib/: jpeg.lib  libpng.lib
RWK_Source/Framework/OS/Windows/Lib/: SDL2.lib
RWK_Source/Framework/OS/Windows/RAPT/: RAPT.sln
RWK_Source/Framework/OS/Windows/RAPT/RAPT/: RAPT.vcxproj  RAPT.vcxproj.filters  ReadMe.txt
RWK_Source/Framework/OS/Windows/RAPT/RAPT/Stripped (NoGFX, NoBass)/RAPT.tlog/: CL.10236.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RAPT.lastbuildstate
RWK_Source/Framework/OS/Windows/RAPT/RAPT/Stripped/RAPT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RAPT.lastbuildstate
RWK_Source/Framework/OS/Windows/Zip/: unzip.cpp  unzip.h  zip.cpp
RWK_Source/Framework/RAPT/: rapt.h  rapt_CPU.cpp  rapt_CPU.h  rapt_CPUHelpers.cpp  rapt_CPUHelpers.h  rapt_app.cpp  rapt_app.h  rapt_audio.cpp  rapt_audio.h  rapt_color.cpp  rapt_color.h  rapt_comm.cpp  rapt_comm.h  rapt_console.cpp  rapt_console.h  rapt_defines.h  rapt_font.cpp  rapt_font.h  rapt_graphics.cpp  rapt_graphics.h  rapt_headers.h  rapt_image.cpp  rapt_image.h  rapt_image_tinygif.h  rapt_image_tinyjpg.h  rapt_input.cpp  rapt_input.h  rapt_iobuffer.cpp  rapt_iobuffer.h  rapt_legacy.cpp  rapt_list.cpp  rapt_list.h  rapt_math.cpp  rapt_math.h  rapt_matrix.cpp  rapt_matrix.h  rapt_ml.cpp  rapt_ml.h  rapt_model.cpp  rapt_model.h  (+22 more)
RWK_Source/Games/RWK/Project/CMakeWin/: CMakeLists.txt  Main_Win.cpp
RWK_Source/Games/RWK/Project/Linux/: CMakeLists.txt  clear.sh  main.cpp  publish.sh  readme.txt
RWK_Source/Games/RWK/Project/Win/: Main_Win.cpp  RWK.rc  RWK.sln
RWK_Source/Games/RWK/Project/Win/RWK/: RWK.vcxproj  RWK.vcxproj.filters
RWK_Source/Games/RWK/Resources/data/: DISARMED.kitty  ELECTRICMAYHEM.kitty  EXPERTLEVEL.kitty  FLASHLEVEL.kitty  GIRDERLAND.kitty  LOVENROCKETS.kitty  MASTERLEVEL.kitty  NOVICELEVEL.kitty  SHORTBOSSY.kitty  SOCLOSE.kitty  TELEFORT.kitty  createprofile.ml  recover.ml  sendactivation.ml  signin.ml  signinfail.ml  signinnotactive.ml  tutor.ml
RWK_Source/Games/RWK/Resources/images/: Controls.bundle  ETools.bundle  FunDialog.bundle  Loader.bundle  Play.bundle  Tiles.bundle
RWK_Source/Games/RWK/Source/: Anim.cpp  Anim.h  Beepbox.cpp  Beepbox.h  Bundle_Controls.cpp  Bundle_Controls.h  Bundle_ETools.cpp  Bundle_ETools.h  Bundle_FunDialog.cpp  Bundle_FunDialog.h  Bundle_Loader.cpp  Bundle_Loader.h  Bundle_Play.cpp  Bundle_Play.h  Bundle_Sounds.cpp  Bundle_Sounds.h  Bundle_Tiles.cpp  Bundle_Tiles.h  Dialog.cpp  Dialog.h  Game.cpp  Game.h  HighScoreList.cpp  HighScoreList.h  MLRender.cpp  MLRender.h  MainMenu.cpp  MainMenu.h  Makermall.cpp  Makermall.h  MyApp.cpp  MyApp.h  Pathfinder_Atomica.cpp  Pathfinder_Atomica.h  Player.cpp  Player.h  SaveGame.cpp  SaveGame.h  TitleScreen.cpp  TitleScreen.h  (+7 more)
RWK_Source/Games/RWK/Source_Images/Controls/: _bundle.txt
RWK_Source/Games/RWK/Source_Images/ETools/: _bundle.txt
RWK_Source/Games/RWK/Source_Images/FunDialog/: _bundle.txt
RWK_Source/Games/RWK/Source_Images/Loader/: _bundle.txt
RWK_Source/Games/RWK/Source_Images/Play/: _bundle.txt
RWK_Source/Games/RWK/Source_Images/Play/_FXFont/: Font_Commodore64Angled11Outline.fontinfo  Font_Commodore64Angled18Outline.fontinfo  Font_Commodore64Angled8Outline.fontinfo
RWK_Source/Games/RWK/Source_Images/Tiles/: _bundle.txt
RWK_Source/Games/RWK/Source_Images/Tiles/paint__TILESET/: tileset.txt
RWK_Source/Games/RWK/Source_Sounds/: _soundbundle.txt
docker/: Dockerfile  build.sh  setup.sh
